<resources>
    <string name="app_name">Calculator</string>
    <string name="c">C</string>
    <string name="open">(</string>
    <string name="close">)</string>
    <string name="deletes_last_symbol">Deletes last symbol</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="divide">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="multiply">*</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="dot">.</string>
    <string name="_0">0</string>
    <string name="equals">=</string>
    <string name="minus">-</string>
    <string name="square">x²</string>
    <string name="sqrt">√</string>
    <string name="sin">sin</string>
    <string name="abs">abs</string>
    <string name="cos">cos</string>
    <string name="degree">^</string>
    <string name="tg">tg</string>
    <string name="e">e</string>
    <string name="pi">π</string>
    <string name="night">Night</string>
    <string name="day">Day</string>
</resources>