<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <HorizontalScrollView style="@style/Line">

        <TextView
            android:id="@+id/expression"
            style="@style/TextStyle" />

    </HorizontalScrollView>

    <HorizontalScrollView style="@style/Line">

        <TextView
            android:id="@+id/result"
            style="@style/TextStyle" />
    </HorizontalScrollView>

    <LinearLayout style="@style/Line">

        <Button
            android:id="@+id/clear"
            style="@style/ActionButton"
            android:text="@string/c" />

        <Button
            android:id="@+id/open"
            style="@style/ActionButton"
            android:text="@string/open" />

        <Button
            android:id="@+id/close"
            style="@style/ActionButton"
            android:text="@string/close" />

        <ImageButton
            android:id="@+id/delete"
            style="@style/ActionButton"
            android:contentDescription="@string/deletes_last_symbol"
            android:padding="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/backspace" />
    </LinearLayout>

    <LinearLayout style="@style/Line">

        <Button
            android:id="@+id/seven"
            style="@style/NumberButton"
            android:text="@string/_7" />

        <Button
            android:id="@+id/eight"
            style="@style/NumberButton"
            android:text="@string/_8" />

        <Button
            android:id="@+id/nine"
            style="@style/NumberButton"
            android:text="@string/_9" />

        <Button
            android:id="@+id/divide"
            style="@style/ActionButton"
            android:text="@string/divide" />
    </LinearLayout>

    <LinearLayout style="@style/Line">

        <Button
            android:id="@+id/four"
            style="@style/NumberButton"
            android:text="@string/_4" />

        <Button
            android:id="@+id/five"
            style="@style/NumberButton"
            android:text="@string/_5" />

        <Button
            android:id="@+id/six"
            style="@style/NumberButton"
            android:text="@string/_6" />

        <Button
            android:id="@+id/multiply"
            style="@style/ActionButton"
            android:text="@string/multiply" />
    </LinearLayout>

    <LinearLayout style="@style/Line">

        <Button
            android:id="@+id/one"
            style="@style/NumberButton"
            android:text="@string/_1" />

        <Button
            android:id="@+id/two"
            style="@style/NumberButton"
            android:text="@string/_2" />

        <Button
            android:id="@+id/three"
            style="@style/NumberButton"
            android:text="@string/_3" />

        <Button
            android:id="@+id/plus"
            style="@style/ActionButton"
            android:text="@string/plus" />
    </LinearLayout>

    <LinearLayout style="@style/Line">

        <Button
            android:id="@+id/dot"
            style="@style/NumberButton"
            android:text="@string/dot" />

        <Button
            android:id="@+id/zero"
            style="@style/NumberButton"
            android:text="@string/_0" />

        <Button
            android:id="@+id/equals"
            style="@style/EqualsButton"
            android:text="@string/equals" />

        <Button
            android:id="@+id/minus"
            style="@style/ActionButton"
            android:text="@string/minus" />
    </LinearLayout>
</LinearLayout>
